--- a/sites/all/themes/zen_avenue/css/avenueresponsive.css
+++ b/sites/all/themes/zen_avenue/css/avenueresponsive.css
@@ -281,6 +281,9 @@
     /* Note: Design for a width of 480px */
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
-
+	.volunteer {
+		margin-top: .5em;
+		padding: .35em .5em;
+	}
 
 }
