--- a/sites/all/themes/zen_avenue/css/avenueresponsive.css
+++ b/sites/all/themes/zen_avenue/css/avenueresponsive.css
@@ -281,9 +281,15 @@
     /* Note: Design for a width of 480px */
 
 @media only screen and (min-width: 480px) and (max-width: 767px) {
-	.volunteer {
+
+}
+
+
+/* Mobile -- Front page temp only
+================================================== */
+@media only screen and (max-width: 480px) {
+  .volunteer {
 		margin-top: .5em;
 		padding: .35em .5em;
 	}
-
 }
