welcome div needs to be full width on mobile portrait.

--- a/sites/all/themes/zen_avenue/css/avenueresponsive.css
+++ b/sites/all/themes/zen_avenue/css/avenueresponsive.css
@@ -295,3 +295,14 @@
 		font-weight: normal;
 	}
 }
+
+@media only screen and (max-width: 360px) {
+	.welcome {
+		width: 100%;
+		left: 0;
+	}
+
+	.volunteer {
+		margin: .5em;
+	}
+}
