Not sure how to disable certain field groups on registration form
This is a temp fix :|

--- a/sites/all/themes/zen_avenue/css/avenuecod.css
+++ b/sites/all/themes/zen_avenue/css/avenuecod.css
@@ -693,3 +693,9 @@ body.node-type-event div.form-type-select label {
 h2.feature-title {
 	margin-bottom: 5px;
 }
+
+
+/** TEMP Login Adjustment until I can get info for how to disable certain panels */
+.field-group-fieldset .group-drupal-info, .field-group-tab .group-volunteer-info {
+	display: none;
+}
