--- a/sites/all/themes/zen_avenue/css/avenuecod.css
+++ b/sites/all/themes/zen_avenue/css/avenuecod.css
@@ -359,7 +359,11 @@ div.view-sponsorship-options-title td.views-field-title a {
   color: green;
   text-align: right;
 }
-
+.personal-schedule-outer {
+	margin-bottom: 12px;
+	padding-bottom: 12px;
+	border-bottom: 1px solid #285E88;
+}
 
 /* PROMOS */
 
