CSS - cleanup of 2013 theme branched off of integration branch

--- a/sites/all/themes/zen_avenue/css/avenue.css
+++ b/sites/all/themes/zen_avenue/css/avenue.css
@@ -2,9 +2,11 @@
 @import url(http://fonts.googleapis.com/css?family=Exo:500,900);
 
 /* HIDDEN */
+/*
 .mobileTitle {
 	display: none;
 }
+*/
 
 body {
 	direction: ltr;
@@ -286,15 +288,14 @@ h2.title-inspiration, .node-type-blog h1#page-title {
 }
 
 .front #main-wrapper {
-	padding-top: 5px;
+	padding: 30px 20px 10px;
 }
 
 .front #main .block {
 	float: left;
-	height: auto;
 	margin: 0 1% 2%;
 	width: 31.33333333%;
-	padding: 0;
+	padding: 15px;
 	height: 430px;
 }
 
@@ -413,9 +414,11 @@ h2.title-inspiration, .node-type-blog h1#page-title {
 	-webkit-box-shadow: inset -2px 0 2px #06253e;
 	box-shadow:         inset -2px 0 2px #06253e;
 	background-color: #06253e;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	left: 0;
+	bottom: 0;
+	overflow-y: scroll;
 }
 
 .sidebar-first .region-featured, .sidebar-first #main-wrapper, .sidebar-first #footer-wrapper {
@@ -477,6 +480,10 @@ h2.title-inspiration, .node-type-blog h1#page-title {
 
 .sidebar-first #main {
 	width: 92%;
+}
+
+.front.sidebar-first #main {
+	width: 100%;
 }
 
 .item-list ul,
@@ -639,7 +646,7 @@ div.views-field-edit-node {
 
 .view-header {
 	margin: 0;
-	padding: 0 0 5px;
+	padding: 0 0 20px;
 	width: 100%;
 	clear: both;
 	overflow: hidden;
@@ -721,8 +728,8 @@ a {
 
 .mobileTitle {
 	line-height: 60px;
-	font-size: 30px;
-	font-weight: 300;
+	font-size: 20px;
+	font-weight: 700;
 }
 
 #wrap .mobileTitle a {
@@ -810,13 +817,25 @@ a {
 }
 
 .region-live .block.last div.content {
-padding: 15px;
+	padding: 15px;
 }
 
 .float-left {
-float: left;
+	float: left;
 }
 
 .float-right {
-float: right;
+	float: right;
+}
+
+
+/* TWITTER BLOCK and minor front page block cleanup */
+
+#twitter-widget-0 {
+	width: 100% !important;
+}
+
+.front #aside .block-block p {
+	padding: 0;
+	font-size: 0.9em;
 }
