--- a/sites/all/themes/zen_avenue/css/avenue.css
+++ b/sites/all/themes/zen_avenue/css/avenue.css
@@ -2,11 +2,9 @@
 @import url(http://fonts.googleapis.com/css?family=Exo:500,900);
 
 /* HIDDEN */
-/*
 .mobileTitle {
 	display: none;
 }
-*/
 
 body {
 	direction: ltr;
@@ -288,14 +286,15 @@ h2.title-inspiration, .node-type-blog h1#page-title {
 }
 
 .front #main-wrapper {
-	padding: 30px 20px 10px;
+	padding-top: 5px;
 }
 
 .front #main .block {
 	float: left;
+	height: auto;
 	margin: 0 1% 2%;
 	width: 31.33333333%;
-	padding: 15px;
+	padding: 0;
 	height: 430px;
 }
 
@@ -414,11 +413,9 @@ h2.title-inspiration, .node-type-blog h1#page-title {
 	-webkit-box-shadow: inset -2px 0 2px #06253e;
 	box-shadow:         inset -2px 0 2px #06253e;
 	background-color: #06253e;
-	position: fixed;
+	position: absolute;
 	top: 0;
 	left: 0;
-	bottom: 0;
-	overflow-y: scroll;
 }
 
 .sidebar-first .region-featured, .sidebar-first #main-wrapper, .sidebar-first #footer-wrapper {
@@ -480,10 +477,6 @@ h2.title-inspiration, .node-type-blog h1#page-title {
 
 .sidebar-first #main {
 	width: 92%;
-}
-
-.front.sidebar-first #main {
-	width: 100%;
 }
 
 .item-list ul,
@@ -646,7 +639,7 @@ div.views-field-edit-node {
 
 .view-header {
 	margin: 0;
-	padding: 0 0 20px;
+	padding: 0 0 5px;
 	width: 100%;
 	clear: both;
 	overflow: hidden;
@@ -728,8 +721,8 @@ a {
 
 .mobileTitle {
 	line-height: 60px;
-	font-size: 20px;
-	font-weight: 700;
+	font-size: 30px;
+	font-weight: 300;
 }
 
 #wrap .mobileTitle a {
@@ -817,25 +810,13 @@ a {
 }
 
 .region-live .block.last div.content {
-	padding: 15px;
+padding: 15px;
 }
 
 .float-left {
-	float: left;
+float: left;
 }
 
 .float-right {
-	float: right;
-}
-
-
-/* TWITTER BLOCK and minor front page block cleanup */
-
-#twitter-widget-0 {
-	width: 100% !important;
-}
-
-.front #aside .block-block p {
-	padding: 0;
-	font-size: 0.9em;
+float: right;
 }
