Styling sidebar-wrapper fix Firefox bug with fixed position elements

--- a/sites/all/themes/zen_avenue/css/avenue.css
+++ b/sites/all/themes/zen_avenue/css/avenue.css
@@ -883,6 +883,11 @@ width: 48%;
 	margin: 0;
 }
 
+.sidebar-wrapper {
+	position: absolute;
+	top: 0;
+}
+
 
 /* TWITTER BLOCK and minor front page block cleanup */
 
