--- a/sites/all/themes/zen_avenue/css/avenue.css
+++ b/sites/all/themes/zen_avenue/css/avenue.css
@@ -407,29 +407,30 @@ h2.title-inspiration, .node-type-blog h1#page-title {
 }
 
 
-/* SIDEBAR FIRST */
-.region-sidebar-first {
+/* SIDEBARS FIRST */
+.region-sidebar-first, .region-sidebar-second {
 	float: left;
 	width: 20%;
 	overflow: hidden;
 	padding-top: 60px;
-	padding-bottom: 100%;
 	-moz-box-shadow: inset -2px 0 2px #06253e;
 	-webkit-box-shadow: inset -2px 0 2px #06253e;
 	box-shadow: inset -2px 0 2px #06253e;
 	background-color: #06253e;
-	position: fixed;
-	top: 0;
-	left: 0;
 	bottom: 0;
-	overflow-y: scroll;
 	color: #eee;
 	font-size: 13px;
+	margin-bottom: -99999px;
+	padding-bottom: 99999px;
+}
+
+.region-sidebar-second {
+	float: right;
 }
 
 .sidebar-first .region-featured, .sidebar-first #main-wrapper, .sidebar-first #footer-wrapper {
 	float: right;
-	width: 80.1%;
+	width: 80%;
 }
 
 .region-sidebar-first h2.block-title, .region-sidebar-second h2.block-title {
@@ -849,25 +850,6 @@ margin: 0 20%;
 width: 48%;
 }
 
-.region-sidebar-second {
-	float: right;
-	width: 20%;
-	overflow: hidden;
-	padding-top: 60px;
-	padding-bottom: 100%;
-	-moz-box-shadow: inset -2px 0 2px #06253e;
-	-webkit-box-shadow: inset -2px 0 2px #06253e;
-	box-shadow: inset -2px 0 2px #06253e;
-	background-color: #06253e;
-	position: fixed;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	overflow-y: scroll;
-	color: #eee;
-	font-size: 13px;
-}
-
 .two-sidebars #footer-wrapper {
 	padding: 20px;
 	overflow: hidden;
@@ -881,11 +863,6 @@ width: 48%;
 	float: left;
 	overflow: hidden;
 	margin: 0;
-}
-
-.sidebar-wrapper {
-	position: absolute;
-	top: 0;
 }
 
 
