--- a/sites/all/themes/zen_avenue/css/avenuecod.css
+++ b/sites/all/themes/zen_avenue/css/avenuecod.css
@@ -129,17 +129,12 @@ h2.welcome-title {
 	padding-left: 1em;
 }
 
-#main #aside .block {
+.not-front #aside .block {
 	box-shadow: 0 1px 1px #ddd;
 	background: #f2f2f2;
 }
 
-#aside .block {
-	box-shadow: 0 1px 1px #ddd;
-	background: #f2f2f2;
-}
-
-#aside h2.block-title {
+.not-front #aside h2.block-title {
 	background: #e2e2e2;
 	color: #373B41;
 }
