--- a/sites/all/themes/zen_avenue/css/avenueresponsive.css
+++ b/sites/all/themes/zen_avenue/css/avenueresponsive.css
@@ -292,6 +292,19 @@
 		margin: 10px auto 20px;
 	}
 
+	#user-profile-form .vertical-tabs ul.vertical-tabs-list, #user-register-form .vertical-tabs ul.vertical-tabs-list {
+		width: 100% !important;
+		float: none !important;
+	}
+
+	#user-profile-form .vertical-tabs fieldset, #user-register-form .vertical-tabs fieldset {
+		padding: 0 !important;
+		border: 0 !important;
+		max-width: 100% !important;
+		float: right !important;
+		margin: 0.5em 0 !important;
+	}
+
 }
 
 
