--- a/sites/all/themes/zen_avenue/css/avenuecod.css
+++ b/sites/all/themes/zen_avenue/css/avenuecod.css
@@ -1,4 +1,4 @@
-#main .block, .view-nyccamp-schedule .view-grouping, .region-live .block.last, .page-program .panel-pane .view {
+#main .block, .view-nyccamp-schedule .view-grouping, .region-live .block.last, .page-program .panel-pane .view, .profile-fieldgroup, #edit-picture {
 	box-shadow: 0 1px 2px #eee;
 	background: #fff;
 	border-radius: 0 0 3px 3px;
