--- a/sites/all/themes/zen_avenue/css/avenueresponsive.css
+++ b/sites/all/themes/zen_avenue/css/avenueresponsive.css
@@ -22,7 +22,7 @@
 	width: 25%;
 	}
 	
-	.sidebar-first .region-featured, .sidebar-first #main-wrapper, .sidebar-first #footer-wrapper {
+	.front.sidebar-first .region-featured, .front.sidebar-first #main-wrapper, .front.sidebar-first #footer-wrapper {
 	width: 75%;
 	}
 
@@ -62,7 +62,7 @@
 		display: block;
 	}
 
-	#main, #header .section, #footer-wrapper-inner, .sidebar-first #main {
+	#main, #header .section, #footer-wrapper-inner, .front.sidebar-first #main {
 	margin: 0 auto;
 	width: 94% !important;
 	}
@@ -72,7 +72,7 @@
 		padding: 0 0 20px; /* Reduce padding now that header is not fixed */
 	}
 
-	#footer-nav, .region-footer, .col-01, .col-02, .col-03, #block-menu-menu-footer-menu, .front #main .block, .front #aside , .not-front #aside, .front #content , .not-front #content, #sidebar-first, #sidebar-second, .region-sidebar-first, .sidebar-first .region-featured, .sidebar-first #main-wrapper, .sidebar-first #footer-wrapper, .region-live .block.first, .region-live .block.last {
+	#footer-nav, .region-footer, .col-01, .col-02, .col-03, #block-menu-menu-footer-menu, .front #main .block, .front #aside , .not-front #aside, .front #content , .not-front #content, #sidebar-first, #sidebar-second, .region-sidebar-first, .front.sidebar-first .region-featured, .front.sidebar-first #main-wrapper, .front.sidebar-first #footer-wrapper, .region-live .block.first, .region-live .block.last {
 		float: none;
 		margin: 0 auto 1em;
 		width: 100%;
@@ -97,11 +97,11 @@
 		width: 100% !important;
 	}
 
-	.sidebar-first #header .section {
+	.front.sidebar-first #header .section {
 		padding: 0 15px 0 10px;
 	}
 
-	.sidebar-first #footer-wrapper {
+	.front.sidebar-first #footer-wrapper {
 		margin-bottom: 0;
 	}
 
