Initial push for the feature attendees view

--- a/sites/all/themes/zen_avenue/css/views-styles.css
+++ b/sites/all/themes/zen_avenue/css/views-styles.css
@@ -3,6 +3,13 @@
  * Views Styling
  */
 
+/*
+ * Flexslider (Featured Attendees View)
+ *
+ */
+.view-attendees .flexslider .slides > li {
+  margin-right: 5px;
+}
 
 /*
  * Views' admin tabs
