--- a/sites/all/themes/zen_avenue/css/views-styles.css
+++ b/sites/all/themes/zen_avenue/css/views-styles.css
@@ -7,9 +7,8 @@
  * Flexslider (Featured Attendees View)
  *
  */
-.view-attendees .flexslider .slides > li {
-  margin-right: 10px;
-}
+.view-attendees .flexslider .slides > li { margin-right: 10px }
+.view-attendees .flexslider { margin: 0 0 -20px }
 
 /*
  * Views' admin tabs
