--- a/sites/all/themes/zen_avenue/css/avenue.css
+++ b/sites/all/themes/zen_avenue/css/avenue.css
@@ -734,7 +734,9 @@ a {
 
 .sideslide #mobile-nav {
 	left: 0;
-	height: 4000px;
+    /* Trick with streching height to the end of page*/
+    margin-bottom: -99999px;
+    padding-bottom: 99999px;
 }
 
 .mobileTitle {
