--- a/sites/all/themes/zen_avenue/css/avenueresponsive.css
+++ b/sites/all/themes/zen_avenue/css/avenueresponsive.css
@@ -110,7 +110,9 @@
         top: 0;
         left: -100%;
         width: auto;
-        height: 3000px;
+        /* Trick with streching height to the end of page*/
+        margin-bottom: -99999px;
+        padding-bottom: 99999px;
         z-index: 100;
         -webkit-transition: left .3s ease-out;
         -moz-transition: left .3s ease-out;
