mirie: line-height is too tight for h3.

--- a/sites/all/themes/zen_avenue/css/avenue.css
+++ b/sites/all/themes/zen_avenue/css/avenue.css
@@ -224,6 +224,10 @@ h1, h2, h3, h4, h5, h6 {
 	margin: 5px 0 10px;
 }
 
+h3 {
+	line-height: 1.5em;
+}
+
 h1#page-title {
 	margin-bottom: 20px;
 	text-transform: none;
