makes the Personal Schedule title dynamic. Groups My Schedule by Day and sorts sessions asc

--- a/sites/all/themes/zen_avenue/css/avenuecod.css
+++ b/sites/all/themes/zen_avenue/css/avenuecod.css
@@ -384,7 +384,11 @@ div.view-sponsorship-options-title td.views-field-title a {
 .personal-schedule-outer {
 	margin-bottom: 12px;
 	padding-bottom: 12px;
-	border-bottom: 1px solid #285E88;
+}
+
+.page-user-schedule span.date-display-single {
+  font-family: 'Exo', sans-serif;
+  font-weight: bold;
 }
 
 /* PROMOS */
