--- a/sites/all/themes/zen_avenue/css/avenue.css
+++ b/sites/all/themes/zen_avenue/css/avenue.css
@@ -1051,3 +1051,23 @@ div.panel-pane.pane-views.pane-team {
 .team-page .views-field-field-profile-last {
   display: inline-block;
 }
+
+/*
+ * Directions page
+ */
+
+.google-maps-wrapper {
+  position: relative;
+  padding-bottom: 75%;
+  height: 0;
+  overflow: hidden;
+}
+
+.google-maps-wrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
