--- a/sites/all/themes/zen_avenue/css/views-styles.css
+++ b/sites/all/themes/zen_avenue/css/views-styles.css
@@ -7,8 +7,8 @@
  * Flexslider (Featured Attendees View)
  *
  */
-.view-queues .flexslider .slides > li { margin-right: 10px }
-.view-queues .flexslider { margin: 0 0 -20px }
+.view-attendees-featured .flexslider .slides > li { margin-right: 10px }
+.view-attendees-featured .flexslider { margin: 0 0 -20px }
 
 /*
  * Views' admin tabs
