--- a/sites/all/themes/zen_avenue/css/avenue.css
+++ b/sites/all/themes/zen_avenue/css/avenue.css
@@ -624,6 +624,9 @@ div.vertical-tabs {
 form.commerce-add-to-cart input[type="submit"] {
   font-size: 0.8em;
   padding: 3px 25px;
+  background: transparent;
+  border: none;
+  color: gray
 }
 /* Animated throbber */
 html.js input.form-autocomplete {
