Adds configuration for display suite on sessions.

--- a/sites/all/themes/zen_avenue/css/nodes.css
+++ b/sites/all/themes/zen_avenue/css/nodes.css
@@ -29,3 +29,14 @@
 .lt-ie8 .comment-unpublished > * {
   position: relative; /* Otherwise these elements will appear below the "Unpublished" text. */
 }
+#content > div > div > div.field.field-name-ds-user-picture.field-type-ds.field-label-hidden {
+  float: left;
+  margin: 0 4% 1% 0;
+  width: 22%;
+}
+#content > div > div > div.field.field-name-submitted-by.field-type-ds.field-label-hidden {
+  text-transform: uppercase;
+  font-size: 12px;
+  line-height: 1.5em;
+  margin: 0 0 1.5em;
+}
